kevin-lenovo-id changes made for login link and white space fix in modal

--- a/vtr-ui/src/app/components/modal/modal-lenovo-id/modal-lenovo-id.component.scss
+++ b/vtr-ui/src/app/components/modal/modal-lenovo-id/modal-lenovo-id.component.scss
@@ -1,24 +1,17 @@
 @import '../../../app.theme.scss';
 
 .vtr-modal-lenovo-id {
-  /************** common *************/
-  .modal-dialog {
-    width: 500px;
-    height: 640px;
-  }
-
-  .container {
-    width: 500px;
-    height: 640px;
-		border-radius: 1rem;
-		background-color: $light;
-		box-shadow: $drop_shadow;
-  }
-
-  .btn-close {
-    position: absolute;
-    right: 1%;
-    top: 1%;
-  }
+ 	padding-left: 3rem;
+	.id-container {
+		width: 460px;
+		height: 620px; 
+		margin :0 auto; 
+	}
+	.btn-close {
+		position: absolute;
+		right:2%;
+		top:2%; 
+	}
 
 }
+
